# BIG-small

./: .env.example  .env.phase9.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  phase12-full-experiment.yml  phase9-isaac-self-hosted.yml
artifacts/phase13_1/: manifest.json
artifacts/phase9/: verify_phase9_summary.json
artifacts/phase9_1/: phase9_1_report.md  phase9_1_summary.json  phase9_history_check.json
artifacts/thesis_report/: build_status.json  论文报告.docx  论文报告.tex
assets/: manifest.yaml
configs/: phase1_mock.json  phase1_mock.json.zh.md
configs/models/: small_model_catalog.yaml
configs/phase12/: final_experiment_suite.yaml
configs/phase9/: benchmark_full.yaml  benchmark_smoke.yaml  benchmark_validation.yaml  domain_randomization.yaml  isaac_sim.yaml  moveit.yaml  mujoco.yaml  ros2.yaml  sensor_noise.yaml  simulator.yaml
configs/real_robot/: example.yaml  level0_read_only.template.yaml
configs/safety/: default.yaml  strict.yaml  test.yaml
contracts/: README.md
contracts/schemas/: README.md
dashboard/: eslint.config.js  index.html  package-lock.json  package-lock.json.zh.md  package.json  package.json.zh.md  playwright.config.ts  tsconfig.app.json.zh.md  tsconfig.json.zh.md  tsconfig.node.json.zh.md  vite.config.ts
dashboard/src/: main.tsx  styles.css
docs/: README.md  api.md  architecture.md  auto_mode_selection.md  chinese_code_comments.md  contracts.md  current_authoritative_status.md  dashboard_api.md  dashboard_architecture.md  dashboard_security.md  dashboard_user_guide.md  dry_run_validation.md  event_triggered_autonomy.md  evidence_provenance.md  failure_summary.md  final_project_report.md  glossary.md  local_recovery.md  local_replanning.md  mode_transition.md  mujoco_runtime_acceptance.md  network_degradation.md  operator_confirmation.md  phase0_1_acceptance_report.md  phase0_acceptance.md  phase0_report.md  phase10_2a_report.md  phase10_2b_acceptance.md  phase10_2b_design.md  phase10_2b_report.md  phase10_2c_level0_site_procedure.md  phase10_acceptance.md  phase10_design.md  phase10_report.md  phase11_1_acceptance.md  phase11_1_design.md  phase11_1_report.md  phase11_acceptance.md  phase11_design.md  phase11_report.md  (+102 more)
docs/handover/: phase13_current_progress_handoff.md
docs/thesis/: discussion.md  (+23 more)
edge/: README.md
environments/: ros2_jazzy_moveit.explicit.txt  ros2_jazzy_moveit.history.yml
ros2_ws/src/bigsmall_fault_injection/: CMakeLists.txt  package.xml
ros2_ws/src/bigsmall_franka_moveit_config/: CMakeLists.txt  package.xml
ros2_ws/src/bigsmall_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/bigsmall_interfaces/action/: FollowJointTrajectory.action  MoveToPose.action
ros2_ws/src/bigsmall_interfaces/msg/: CommandHeader.msg  Contact.msg  ContactArray.msg  FaultEvent.msg  RobotState.msg  SafetyEvent.msg  SceneSummary.msg  SimulationStatus.msg
ros2_ws/src/bigsmall_interfaces/srv/: EmergencyStop.srv  GripperCommand.srv  Home.srv  InjectFault.srv  LoadScenario.srv  ResetWorld.srv  Stop.srv
ros2_ws/src/bigsmall_robot_bridge/: CMakeLists.txt  package.xml
ros2_ws/src/bigsmall_robot_bridge/bigsmall_robot_bridge/: __init__.py  moveit_boundary_node.py
ros2_ws/src/bigsmall_robot_bridge/scripts/: bigsmall_moveit_boundary_node
ros2_ws/src/bigsmall_scene_bridge/: CMakeLists.txt  package.xml
ros2_ws/src/bigsmall_sim_bridge/: CMakeLists.txt  package.xml
ros2_ws/src/bigsmall_sim_bridge/bigsmall_sim_bridge/: __init__.py  frame_conversion.py  safety_limits.py  sim_bridge_node.py
ros2_ws/src/bigsmall_sim_bridge/scripts/: bigsmall_sim_bridge_node
scripts/: README.md  __init__.py  analyze_llm_only_baseline.py  analyze_phase12_results.py  analyze_phase13_1.py  bootstrap_bigsmall_console.py  build_dashboard.sh  build_phase12_demo_bundle.py  build_phase13_1_figures.py  build_thesis.py  build_thesis_evidence.py  build_thesis_figures.py  build_thesis_tables.py  check_chinese_comments.py  check_docs.py  check_llm_provider_environment.py  check_model_control_secrets.py  check_model_runtime.py  check_thesis_build.py  check_thesis_claims.py  check_thesis_figures.py  export_dashboard_openapi.py  export_llm_comparison_tables.py  export_phase12_thesis_assets.py  init_simulation_runtime_db.py  inspect_simulation_runtime_db.py  recover_phase11_runtime.py  run_checks.sh  run_fault_injection_suite.py  run_fixed_pick_place.py  run_llm_only_baseline.py  run_phase10_acceptance_level.py  run_phase10_experiment.py  run_phase12_experiments.py  run_phase13_1_experiments.py  run_phase2_failure_case.py  run_phase2_replay_test.py  run_phase2_restart_recovery_test.py  run_phase2_task.py  run_phase3_collision_case.py  (+81 more)
shared/: README.md
simulation/: README.md
tests/: __init__.py  phase2_helpers.py  phase9_helpers.py  test_chinese_comment_checker.py  test_llm_only_baseline.py  test_phase0_acceptance.py  test_phase0_config_logging.py  test_phase0_contracts.py  test_phase10_2a_contracts.py  test_phase10_2b_acceptance_contract.py  test_phase10_2b_dashboard_backend.py  test_phase10_2b_dashboard_websocket.py  test_phase10_2c_level0_contract.py  test_phase10_entrypoints.py  test_phase10_moveit_dry_run_contract.py  test_phase10_real_robot_contracts.py  test_phase10_safety_faults.py  test_phase11_1_simulation_runtime.py  test_phase11_2_model_control_backend.py  test_phase11_simulation_workbench_backend.py  test_phase12_1_actual_runner_semantics.py  test_phase12_2_runtime_authenticity.py  test_phase12_final_evaluation.py  test_phase1_1_safety_closure.py  test_phase1_acceptance.py  test_phase1_mock_robot.py  test_phase1_skill_executor.py  test_phase2_repository_replay_recovery.py  test_phase2_state_machine.py  test_phase2_task_runtime.py  test_phase3_1_integration.py  test_phase3_2_integration.py  test_phase3_safety_repository.py  test_phase3_safety_shield.py  test_phase3_stop_controller.py  test_phase4_cloud_planning.py  test_phase4_step0_safety_hardening.py  test_phase5_retrospective_hardening.py  test_phase5_supervision.py  test_phase6_2_replan_resume.py  (+86 more)
thesis/: appendix.tex  references.bib
(+6982 files in other folders)
