[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "BIG-small"
version = "0.1.0"
description = "BIG-small: a cloud-edge collaborative control system for a small robot arm."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110,<0.137",
    "pydantic>=2.6",
    "starlette>=0.36,<1.0",
    "pyyaml>=6.0",
    "uvicorn[standard]>=0.29",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28,<0.29",
    "mypy>=1.18",
    "pytest>=8.3",
    "ruff>=0.14",
]
sim = [
    "mujoco>=3.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
packages = ["cloud_edge_robot_arm"]
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["yaml"]
ignore_missing_imports = true
