<?xml version="1.0"?>
<!-- ROS 包说明：故障注入桥接包只用于仿真故障事件，不控制真实硬件。 -->
<package format="3">
  <name>bigsmall_fault_injection</name>
  <version>0.1.0</version>
  <description>BIG-small fault injection bridge package.</description>
  <maintainer email="noreply@example.com">BIG-small</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
</package>
