<?xml version="1.0"?>
<package format="3">
  <name>bigsmall_franka_moveit_config</name>
  <version>0.1.0</version>
  <description>Reference MoveIt 2 configuration boundary for BIG-small Phase 9.</description>
  <maintainer email="noreply@example.com">BIG-small</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
</package>
