<?xml version="1.0"?>
<package format="3">
  <name>bigsmall_interfaces</name>
  <version>0.1.0</version>
  <description>BIG-small Phase 9 ROS 2 interface definitions.</description>
  <maintainer email="noreply@example.com">BIG-small</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
</package>
