<?xml version="1.0"?>
<!-- ROS 包说明：接口定义包声明动作、消息和服务契约，不包含运行时控制逻辑。 -->
<package format="3">
  <name>bigsmall_interfaces</name>
  <version>0.1.0</version>
  <description>BIG-small Phase 9 ROS 2 interface definitions.</description>
  <maintainer email="noreply@example.com">BIG-small</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <depend>builtin_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>trajectory_msgs</depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
