<?xml version="1.0"?>
<package format="3">
  <name>bigsmall_robot_bridge</name>
  <version>0.1.0</version>
  <description>BIG-small robot bridge package.</description>
  <maintainer email="noreply@example.com">BIG-small</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <exec_depend>bigsmall_interfaces</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
</package>
